continued implementation, sgoing to take a break and come back as I've stumbled on some changes to other components

--- a/packages/components/src/Card/Card.css
+++ b/packages/components/src/Card/Card.css
@@ -6,6 +6,7 @@
 .card {
   display: block;
   width: 100%;
+  height: fit-content;
   border: var(--border-base) solid var(--color-border);
   border-radius: var(--radius-base);
   outline-color: var(--color-focus);
