UChanged css variable reference so that card doesn't override for border color for children components

--- a/packages/components/src/Card/Card.css
+++ b/packages/components/src/Card/Card.css
@@ -4,9 +4,10 @@
 }
 
 .card {
+  --card-border-color: var(--color-border);
   display: block;
   width: 100%;
-  border: var(--border-base) solid var(--color-border);
+  border: var(--border-base) solid var(--card-border-color);
   border-radius: var(--radius-base);
   outline-color: var(--color-focus);
   background-color: var(--color-surface);
@@ -41,8 +42,7 @@
 }
 
 .clickable {
-  --color-border: transparent;
-
+  --card-border-color: transparent;
   box-shadow: var(--shadow-base);
   color: inherit;
   text-decoration: inherit;
