added aria-describedby, spacing between description and field, and switched to base size

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -277,3 +277,11 @@
 .miniLabel:not(.small) .affixLabel {
   padding-top: calc(var(--field--padding-top) - 2px);
 }
+
+/**
+ * Description
+ **/
+
+.description {
+  margin-top: var(--space-smaller);
+}
