added css to correctly set the content padding

--- a/packages/components/src/Drawer/Drawer.css
+++ b/packages/components/src/Drawer/Drawer.css
@@ -58,3 +58,13 @@
 .content {
   width: 100%;
 }
+
+/* Adjust `Content` components public padding to match the cards */
+.content > * {
+  --public-content--padding: var(--drawer--base-padding);
+}
+
+/* Remove the nested `Content` components public padding */
+.content > * > * {
+  --public-content--padding: 0;
+}
