feat(components): Add vertical option for Divider and update Divider documentation (#707)
* added vertical option for divider, refactored test cases, added examples for options for divider docs

* updated divider props and removed usage of hr

* updated divider documentation to better represent usage of the vertical direction

--- a/packages/components/src/Divider/Divider.css
+++ b/packages/components/src/Divider/Divider.css
@@ -1,10 +1,22 @@
 .divider {
-  height: var(--space-minuscule);
+  --divider-width: var(--border-base);
+  --divider-color: var(--color-border);
   margin: 0;
+  padding: 0;
   border: none;
-  border-bottom: var(--border-base) solid var(--color-border);
 }
 
 .large {
-  border-bottom-width: var(--border-large);
+  --divider-width: var(--border-thick);
+}
+
+.horizontal {
+  height: var(--space-minuscule);
+  border-bottom: var(--divider-width) solid var(--divider-color);
+}
+
+.vertical {
+  width: var(--space-miniscule);
+  height: auto;
+  border-right: var(--divider-width) solid var(--divider-color);
 }
