--- a/packages/design/src/styles.css
+++ b/packages/design/src/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700;900&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap");
 
 body {
-  color: var(--color-greyBlue--dark);
+  color: var(--color-text);
   font-family: var(
     --typography--fontFamily-normal,
     "Source Sans Pro",
@@ -11,5 +11,5 @@ body {
   );
   font-size: var(--typography--fontSize-large, calc(var(--base-unit) * 1.125));
   line-height: var(--typography--lineHeight-large, 1.34);
-  background-color: var(--color-white);
+  background-color: var(--color-surface);
 }
