--- a/packages/components/src/Gallery/Gallery.css
+++ b/packages/components/src/Gallery/Gallery.css
@@ -1,10 +1,54 @@
 .gallery {
-  --message-weight: 400;
-
-  font-weight: var(--message-weight);
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--space-base);
 }
 
-.bold {
-  --message-weight: 800;
-  transform: uppercase;
+.card {
+  --gallery-card--size: var(--space-largest);
+  width: var(--gallery-card--size);
+  height: var(--gallery-card--size);
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* Overriding border styling to match card  */
+.border {
+  --color-border: var(--color-grey--lighter);
+}
+
+.card > * {
+  width: 100%;
+  height: 100%;
+}
+
+.small {
+  --gallery-card--size: var(--space-larger);
+}
+
+.base {
+  --gallery-card--size: var(--space-largest);
+}
+
+.large {
+  --gallery-card--size: var(--space-extravagant);
+}
+
+.centered {
+  display: flex;
+  height: 100%;
+  align-items: center;
+}
+
+.column {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  gap: var(--space-smallest);
+  justify-content: space-between;
 }
