feat(components): Remove drawer content padding (#709)
* removed content padding to align with card, and made title optional

* removed usage of optional title

* actually removed usage of optional title

* updated drawer example to include content for styling

* removed test which was no longer needed

* added css to correctly set the content padding

* updated documentation to use text instead of p

* reverted to better test, not using snapshot and checking specific content

* removed debug test

* updated test name to be more descriptive and easier to understand

--- a/packages/components/src/Drawer/Drawer.css
+++ b/packages/components/src/Drawer/Drawer.css
@@ -57,5 +57,14 @@
 
 .content {
   width: 100%;
-  padding: var(--drawer--base-padding);
+}
+
+/* Adjust `Content` components public padding to match the cards */
+.content > * {
+  --public-content--padding: var(--drawer--base-padding);
+}
+
+/* Remove the nested `Content` components public padding */
+.content > * > * {
+  --public-content--padding: 0;
 }
