--- a/packages/components/src/DatePicker/DatePicker.css
+++ b/packages/components/src/DatePicker/DatePicker.css
@@ -1,10 +1,15 @@
 .datePicker {
-  --message-weight: 400;
-
-  font-weight: var(--message-weight);
+  border-color: var(--color-border) !important;
+  border-radius: var(--radius-base) !important;
 }
 
-.bold {
-  --message-weight: 800;
-  transform: uppercase;
+.datePicker :global(.react-datepicker__header) {
+  padding-top: 0;
+  background: var(--color-surface);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
