Address initial comments

--- a/packages/components/src/DatePicker/DatePicker.css
+++ b/packages/components/src/DatePicker/DatePicker.css
@@ -1,9 +1,14 @@
 .datePicker:global(.react-datepicker) {
   --datepicker-cell-size: calc(var(--space-base) * 2.375);
+  box-shadow: var(--shadow-base);
 
   border-color: var(--color-border);
   border-radius: var(--radius-base);
   font-family: var(--typography--fontFamily-normal);
+}
+
+.datePicker.inline {
+  box-shadow: none;
 }
 
 .datePicker :global(.react-datepicker__header) {
@@ -58,6 +63,7 @@
 
 .datePicker :global(.react-datepicker__day-name) {
   width: auto;
+  color: var(--color-text);
   flex: 1;
 }
 
