Use focus shadow instead of focus
- include z-index to have a nice flow of focus throughout inputGroups

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -53,7 +53,9 @@
 }
 
 .wrapper:focus-within {
-  --field--border-color: var(--color-focus);
+  position: relative;
+  z-index: var(--field--base-elevation);
+  box-shadow: var(--shadow-focus);
 }
 
 .miniLabel {
