Add props to inputdate, adjust formfield test, add Darryls POC

--- a/packages/components/src/DatePicker/DatePicker.css
+++ b/packages/components/src/DatePicker/DatePicker.css
@@ -2,6 +2,10 @@
   display: inline-block;
 }
 
+.fullWidth {
+  display: block;
+}
+
 .datePicker:global(.react-datepicker) {
   --datepicker-cell-size: calc(var(--space-base) * 2.375);
   box-shadow: var(--shadow-base);
