--- a/packages/design/src/elevations.css
+++ b/packages/design/src/elevations.css
@@ -1,6 +1,7 @@
 :root {
   --elevation-base: 1;
   --elevation-menu: 6;
+  --elevation-datepicker: 6;
   /**
    * Modal has this much z-index to overcome docz z-index. This can be lowered
    * once we create our own docz theme
