--- a/packages/components/src/Toast/Toast.css
+++ b/packages/components/src/Toast/Toast.css
@@ -15,7 +15,7 @@
   flex-direction: column;
   align-items: center;
   padding: 0 var(--space-large);
-  color: var(--color-text);
+  color: var(--color-text--reverse);
   font-size: var(--typography--fontSize-large);
   pointer-events: none;
 }
@@ -35,7 +35,7 @@
   align-items: center;
   padding: calc(var(--space-small) / 1.25) var(--space-base);
   border-radius: var(--radius-base);
-  background: var(--color-surface);
+  background: var(--color-surface--reverse);
 }
 
 .icon {
