feat(components): InputDate Component (#783)
* Input Date Working with keydown

* Update test

* Add props to inputdate, adjust formfield test, add Darryls POC

* write docs for inputdate

* Add inputdate tests, update value prop

* remove onCalendarOpen

* Input Date Working with keydown

* Add props to inputdate, adjust formfield test, add Darryls POC

* Move defaultValue out of common form field props

* remove input date css file

* Add defaultValue back to non-common props

* Update input date example

* Address small formatting changes, remove css.d.ts

* Update test and simplify handleChange

* Address ref comments

* Fix width on input group issue

* Add readonly to DatePicker props, fix zindex css problems

* Added jsdocs comment to InputDate value

* Add suffix back

* Remove onClick

* Move readonly and disabled to modal datepicker

* make test variables consistent

* Add component check and full width case in datepicker activator

* Add separate tests for DatePickerActivator component

* Updated activator tests

Co-authored-by: Chris Murray <39704901+chris-at-jobber@users.noreply.github.com>

--- a/packages/components/src/DatePicker/DatePicker.css
+++ b/packages/components/src/DatePicker/DatePicker.css
@@ -2,6 +2,11 @@
   display: inline-block;
 }
 
+.fullWidth {
+  display: block;
+  width: 100%;
+}
+
 .datePicker:global(.react-datepicker) {
   --datepicker-cell-size: calc(var(--space-base) * 2.375);
   box-shadow: var(--shadow-base);
@@ -17,6 +22,10 @@
 :global(.react-datepicker__input-container),
 :global(.react-datepicker-wrapper) {
   max-width: 100%;
+}
+
+.datePickerWrapper :global(.react-datepicker-popper) {
+  z-index: var(--elevation-datepicker);
 }
 
 .datePicker :global(.react-datepicker__header) {
