--- a/packages/components/src/Scheduler/Scheduler.css
+++ b/packages/components/src/Scheduler/Scheduler.css
@@ -1,19 +1,20 @@
 .title {
-    display: flex;
+  display: flex;
 }
 
 .title > *:first-child {
-    flex: 1 1 auto;
+  flex: 1 1 auto;
 }
 
 .datePicker sg-icon[icon="calendar"] {
-    color: var(--color-greyBlue);
+  color: var(--color-greyBlue);
 }
 
-.container input:focus, .container select:focus {
+.container input:focus,
+.container select:focus {
   box-shadow: var(--shadow-focus);
 }
 
 .disabled h5 {
-color: var(--color-disabled);
+  color: var(--color-disabled);
 }
