--- a/packages/components/src/Scheduler/RecurringSelect/components/MonthlyDayOfWeekSelect/MonthlyDayOfWeekSelect.css
+++ b/packages/components/src/Scheduler/RecurringSelect/components/MonthlyDayOfWeekSelect/MonthlyDayOfWeekSelect.css
@@ -1,13 +1,13 @@
-.container{
-    display: flex;
-    margin-bottom: calc(-1 * var(--border-base))
+.container {
+  display: flex;
+  margin-bottom: calc(-1 * var(--border-base));
 }
 
-.order{
-    align-self: center;
-    flex: 1 1 0;
+.order {
+  align-self: center;
+  flex: 1 1 0;
 }
 
 .selector {
-    flex: 9 1 0;
+  flex: 9 1 0;
 }
