--- a/packages/components/src/RecurringSelect/components/DayOfMonthSelect/DayOfMonthSelect.css
+++ b/packages/components/src/RecurringSelect/components/DayOfMonthSelect/DayOfMonthSelect.css
@@ -5,17 +5,17 @@
 .container {
   display: grid;
   width: 100%;
-  padding: var(--border-base);
-  border-radius: var(--radius-base);
-  background: var(--color-border);
+  padding: var(--space-smaller);
+  border: var(--border-base) solid var(--color-border);
+  border-radius: var(--radius-large);
   grid-template-areas:
     ". . . . . . ."
     ". . . . . . ."
     ". . . . . . ."
     ". . . . . . ."
     ". . . lastday lastday lastday lastday";
-  column-gap: var(--border-base);
-  row-gap: var(--border-base);
+  row-gap: var(--space-smaller);
+  column-gap: var(--space-smaller);
 }
 
 .checkboxWrapper {
@@ -39,23 +39,13 @@
 .dayCheckbox {
   display: block;
   padding: 1rem;
+  border-radius: var(--radius-large);
   text-align: center;
   user-select: none;
   background: var(--color-white);
   transition: 300ms;
 }
 
-.dayCheckbox::after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: calc(-1 * var(--border-base));
-  right: calc(-1 * var(--border-base));
-  bottom: calc(-1 * var(--border-base));
-  left: calc(-1 * var(--border-base));
-  z-index: 2;
-  border-radius: var(--radius-base);
-}
 .dayCheckbox:hover {
   background: var(--color-surface--hover);
 }
@@ -73,9 +63,6 @@
 .container input[type="checkbox"]:focus + .dayCheckbox {
   background: var(--color-surface--hover);
 }
-.container input[type="checkbox"]:checked + .dayCheckbox::after {
-  border: var(--border-base) solid var(--color-interactive--hover);
-}
 
 .container input[type="checkbox"]:checked + .dayCheckbox {
   color: var(--color-white);
@@ -86,10 +73,6 @@
   background: var(--color-interactive--hover);
 }
 
-.container input[type="checkbox"]:focus + .dayCheckbox::after {
-  box-shadow: var(--shadow-focus);
-}
-
 .container input[type="checkbox"]:disabled:checked + .dayCheckbox {
   color: var(--color-disabled--secondary);
   background: var(--color-disabled);
@@ -97,8 +80,4 @@
 
 .container input[type="checkbox"]:checked + .dayCheckbox:hover {
   background: var(--color-interactive--hover);
-}
-
-.container input[type="checkbox"]:checked:disabled + .dayCheckbox::after {
-  border: none;
 }
