readd focus styles

--- a/packages/components/src/RecurringSelect/components/WeeklySelect/WeeklySelect.css
+++ b/packages/components/src/RecurringSelect/components/WeeklySelect/WeeklySelect.css
@@ -42,6 +42,7 @@
 }
 
 .container input[type="checkbox"]:focus + .dayCheckbox {
+  box-shadow: var(--shadow-focus);
   background: var(--color-surface--hover);
 }
 
