--- a/packages/components/src/RecurringSelect/components/DayOfMonthSelect/DayOfMonthSelect.css
+++ b/packages/components/src/RecurringSelect/components/DayOfMonthSelect/DayOfMonthSelect.css
@@ -61,6 +61,7 @@
 }
 
 .container input[type="checkbox"]:focus + .dayCheckbox {
+  box-shadow: var(--shadow-focus);
   background: var(--color-surface--hover);
 }
 
