--- a/packages/components/src/RecurringSelect/components/MonthlyDayOfWeekSelect/MonthlyDayOfWeekSelect.css
+++ b/packages/components/src/RecurringSelect/components/MonthlyDayOfWeekSelect/MonthlyDayOfWeekSelect.css
@@ -1,6 +1,30 @@
+.parentContainer {
+  /* useless, only here to avoid linting error */
+  display: block;
+}
+
 .container {
   display: flex;
   margin-bottom: calc(-1 * var(--border-base));
+}
+
+.parentContainer > div:nth-of-type(1) > div:nth-of-type(2) div {
+  border-top-right-radius: var(--radius-large);
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: var(--radius-large);
+}
+.parentContainer > div:nth-of-type(2) > div:nth-of-type(2) div {
+  border-radius: 0;
+}
+.parentContainer > div:nth-of-type(3) > div:nth-of-type(2) div {
+  border-radius: 0;
+}
+.parentContainer > div:nth-of-type(4) > div:nth-of-type(2) div {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: var(--radius-large);
+  border-bottom-left-radius: var(--radius-large);
+  border-top-left-radius: 0;
 }
 
 .order {
