--- a/packages/components/src/RecurringSelect/components/DayOfMonthSelect/DayOfMonthSelect.css
+++ b/packages/components/src/RecurringSelect/components/DayOfMonthSelect/DayOfMonthSelect.css
@@ -28,12 +28,14 @@
 
 /* kept present but hidden for accessibility */
 .container input[type="checkbox"] {
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 1rem;
-  height: 1rem;
-  opacity: 0;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
 }
 
 .dayCheckbox {
