--- a/packages/components/src/RecurringSelect/components/WeeklySelect/WeeklySelect.css
+++ b/packages/components/src/RecurringSelect/components/WeeklySelect/WeeklySelect.css
@@ -31,7 +31,7 @@
 
 .dayCheckbox {
   display: block;
-  padding: 1rem;
+  padding: var(--space-base);
   border-radius: var(--radius-large);
   text-align: center;
   user-select: none;
