--- a/packages/components/src/RecurringSelect/components/DayOfMonthSelect/DayOfMonthSelect.css
+++ b/packages/components/src/RecurringSelect/components/DayOfMonthSelect/DayOfMonthSelect.css
@@ -44,7 +44,7 @@
   border-radius: var(--radius-large);
   text-align: center;
   user-select: none;
-  background: var(--color-white);
+  background: var(--color-surface);
   transition: var(--timing-base);
 }
 
