--- a/packages/components/src/RecurringSelect/components/WeeklySelect/WeeklySelect.css
+++ b/packages/components/src/RecurringSelect/components/WeeklySelect/WeeklySelect.css
@@ -49,7 +49,7 @@
 }
 
 .container input[type="checkbox"]:checked + .dayCheckbox {
-  color: var(--color-white);
+  color: var(--color-text--reverse);
   background: var(--color-interactive);
 }
 
