move shared checkbox styles into own css file, adjust markup for it to work

--- a/packages/components/src/RecurringSelect/components/DayOfMonthSelect/DayOfMonthSelect.css
+++ b/packages/components/src/RecurringSelect/components/DayOfMonthSelect/DayOfMonthSelect.css
@@ -18,69 +18,6 @@
   column-gap: var(--space-smaller);
 }
 
-.checkboxWrapper {
-  position: relative;
-}
-
-.checkboxWrapper:nth-child(n + 1):nth-last-child(-n + 1) {
+.container div:nth-child(n + 1):nth-last-child(-n + 1) {
   grid-area: lastday;
-}
-
-/* kept present but hidden for accessibility */
-.container input[type="checkbox"] {
-  clip: rect(1px, 1px, 1px, 1px);
-  clip-path: inset(50%);
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-}
-
-.dayCheckbox {
-  display: block;
-  padding: var(--space-base);
-  border-radius: var(--radius-large);
-  text-align: center;
-  user-select: none;
-  background: var(--color-surface);
-  transition: var(--timing-base);
-}
-
-.dayCheckbox:hover {
-  background: var(--color-surface--hover);
-}
-
-.container input[type="checkbox"]:disabled + .dayCheckbox {
-  color: var(--color-disabled);
-  background: var(--color-surface--background);
-  cursor: default;
-}
-
-.container input[type="checkbox"]:enabled + .dayCheckbox {
-  cursor: pointer;
-}
-
-.container input[type="checkbox"]:focus + .dayCheckbox {
-  box-shadow: var(--shadow-focus);
-  background: var(--color-surface--hover);
-}
-
-.container input[type="checkbox"]:checked + .dayCheckbox {
-  color: var(--color-text--reverse);
-  background: var(--color-interactive);
-}
-
-.container input[type="checkbox"]:checked:focus + .dayCheckbox {
-  background: var(--color-interactive--hover);
-}
-
-.container input[type="checkbox"]:disabled:checked + .dayCheckbox {
-  color: var(--color-disabled--secondary);
-  background: var(--color-disabled);
-}
-
-.container input[type="checkbox"]:checked + .dayCheckbox:hover {
-  background: var(--color-interactive--hover);
 }
