Introduce border-thickest and apply to divider

--- a/packages/components/src/Divider/Divider.css
+++ b/packages/components/src/Divider/Divider.css
@@ -8,6 +8,17 @@
 
 .large {
   --divider-width: var(--border-thick);
+  opacity: 0.875;
+}
+
+.larger {
+  --divider-width: var(--border-thicker);
+  opacity: 0.625;
+}
+
+.largest {
+  --divider-width: var(--border-thickest);
+  opacity: 0.375;
 }
 
 .horizontal {
