--- a/packages/components/src/RecurringSelect/components/DayOfMonthSelect/DayOfMonthSelect.css
+++ b/packages/components/src/RecurringSelect/components/DayOfMonthSelect/DayOfMonthSelect.css
@@ -14,7 +14,7 @@
   column-gap: var(--space-smaller);
 }
 
-.container div:nth-child(n + 1):nth-last-child(-n + 1) {
+.container :last-child {
   grid-area: lastday;
 }
 
