clean up styles, use Text component

--- a/packages/components/src/RecurringSelect/components/MonthlyDayOfWeekSelect/MonthlyDayOfWeekSelect.css
+++ b/packages/components/src/RecurringSelect/components/MonthlyDayOfWeekSelect/MonthlyDayOfWeekSelect.css
@@ -6,19 +6,19 @@
   margin-bottom: calc(-1 * var(--border-base));
 }
 
-.parentContainer > div:nth-of-type(1) > div:nth-of-type(2) div {
+.parentContainer div:nth-of-type(1) :last-child {
   border-top-right-radius: var(--radius-large);
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
   border-top-left-radius: var(--radius-large);
 }
-.parentContainer > div:nth-of-type(2) > div:nth-of-type(2) div {
+.parentContainer div:nth-of-type(2) :last-child {
   border-radius: 0;
 }
-.parentContainer > div:nth-of-type(3) > div:nth-of-type(2) div {
+.parentContainer div:nth-of-type(3) :last-child {
   border-radius: 0;
 }
-.parentContainer > div:nth-of-type(4) > div:nth-of-type(2) div {
+.parentContainer div:nth-of-type(4) :last-child {
   border-top-right-radius: 0;
   border-bottom-right-radius: var(--radius-large);
   border-bottom-left-radius: var(--radius-large);
