--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -205,6 +205,10 @@ a.button.disabled:hover {
   width: auto;
 }
 
+.hasIconAndLabel > * {
+  text-align: start;
+}
+
 .hasIconAndLabel > *:first-child {
   margin-right: var(--space-small);
 }
