feat(components): Left-align wrapping button labels when Icon is present  (#841)
* Left alignment to button when icon is present

* Stop icon from shrinking due to long label text

--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -205,7 +205,12 @@ a.button.disabled:hover {
   width: auto;
 }
 
+.hasIconAndLabel > * {
+  text-align: start;
+}
+
 .hasIconAndLabel > *:first-child {
+  flex-shrink: 0;
   margin-right: var(--space-small);
 }
 
