--- a/packages/components/src/DatePicker/DatePicker.css
+++ b/packages/components/src/DatePicker/DatePicker.css
@@ -62,6 +62,11 @@
   background: var(--color-surface--background);
 }
 
+.datePicker :global(.react-datepicker__day--disabled) {
+  color: var(--color-disabled--secondary);
+  cursor: default;
+}
+
 .datePicker :global(.react-datepicker__month) {
   margin: 0;
 }
@@ -100,6 +105,20 @@
 .datePicker :global(.react-datepicker__day--selected):hover,
 .datePicker :global(.react-datepicker__day--selected):focus {
   background: var(--color-interactive--hover);
+}
+
+.datePicker :global(.react-datepicker__day--disabled):hover,
+.datePicker :global(.react-datepicker__day--disabled):focus {
+  box-shadow: none;
+  background: transparent;
+}
+
+.datePicker
+  :global(.react-datepicker__day--disabled.react-datepicker__day--outside-month):hover,
+.datePicker
+  :global(.react-datepicker__day--disabled.react-datepicker__day--outside-month):focus {
+  box-shadow: none;
+  background: var(--color-surface--background);
 }
 
 .month {
